--- a/templates/study_chat/chat.html
+++ b/templates/study_chat/chat.html
@@ -26,6 +26,7 @@
                     <i class="layui-icon layui-icon-release" lay-submit="" lay-filter="demo1"
                        type="submit" style="font-size: 30px; color: #1E9FFF;"></i>
                     <div>test</div>
+                    <div>test</div>
                 </div>
             </div>
         </div>
