--- a/templates/study_chat/chat.html
+++ b/templates/study_chat/chat.html
@@ -23,8 +23,7 @@
                     <textarea id="chat-text" name="chat-text" rows="4" autofocus="true" class="text-edit"></textarea>
                 </div>
                 <div class="layui-form-item chat-form-submit" >
-                    <i class="layui-icon layui-icon-release" lay-submit="" lay-filter="demo1"
-                       type="submit" style="font-size: 30px; color: #1E9FFF;"></i>
+                    <i class="layui-icon layui-icon-release submit-icon" lay-submit="" lay-filter="submitChat" type="submit" ></i>
                 </div>
             </div>
         </div>
