--- a/templates/study_chat/index.html
+++ b/templates/study_chat/index.html
@@ -1,11 +1,10 @@
 <!-- 继承layout.html模板 -->
 {% extends "public/layout.html" %}
 {% block content %}
-    <div style="height: 700px">
-        <div class="layui-row layui-col-space5" style="height: 100%">
+    <div style="height: 100vh">
+        <div class="layui-row layui-col-space6" style="height: 100%">
             {#   消息对话主题     #}
-            <div class="layui-col-md3 layui-col-xs3 layui-col-sm3 layui-col-lg3"
-                 style="height: 100%;">
+            <div class="layui-col-md3 layui-col-xs3 layui-col-sm3 layui-col-lg3" style="height: 100%;">
                 {% include "study_chat/themmatic.html" %}
             </div>
 
