--- a/templates/study_chat/chatinfo.html
+++ b/templates/study_chat/chatinfo.html
@@ -5,28 +5,30 @@
     <link rel="stylesheet" href="{% static 'css/study_chat/chatinfo.css' %}">
 </head>
 <body>
+    <div id="userInfo" style="display:none;" data-avatar="{{ userInfo.avatar | default:'/static/assets/images/ic_403.png' }}"></div>
+    <div id="chat-container"></div>
     {#    左边气泡框   #}
-    <div class="chat-message">
-        <div class="avatar-container-left">
-            <img src="{% static 'assets/images/ic_403.png' %}"  class="avatar">
-        </div>
-        <div class="bubble bubble-left">
-            <div class="bubble-content">
-                你好，这是一个漂亮的气泡消息框！--用户1第1句话
-            </div>
-        </div>
-    </div>
+{#    <div class="chat-message">#}
+{#        <div class="avatar-container-left">#}
+{#            <img src="{% static 'assets/images/ic_403.png' %}"  class="avatar">#}
+{#        </div>#}
+{#        <div class="bubble bubble-left">#}
+{#            <div class="bubble-content">#}
+{#                你好，这是一个漂亮的气泡消息框！--用户1第1句话#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
    {#    右边气泡框   #}
-    <div class="chat-message">
-        <div class="avatar-container-right">
-            <img src="{% static 'assets/images/ic_403.png' %}"  class="avatar">
-        </div>
-        <div class="bubble bubble-right">
-            <div class="bubble-content">
-                你好，这是一个漂亮的气泡消息框！--用户2第1句话
-            </div>
-        </div>
-    </div>
+{#    <div class="chat-message">#}
+{#        <div class="avatar-container-right">#}
+{#            <img src="{% static 'assets/images/ic_403.png' %}"  class="avatar">#}
+{#        </div>#}
+{#        <div class="bubble bubble-right">#}
+{#            <div class="bubble-content">#}
+{#                你好，这是一个漂亮的气泡消息框！--用户2第1句话#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
 </body>
 </html>
