--- a/public/static/css/study_chat/chatinfo.css
+++ b/public/static/css/study_chat/chatinfo.css
@@ -67,3 +67,47 @@
     height: 35px;
     border-radius: 50%;
 }
+
+/* 模态窗口（背景） */
+.modal {
+    display: none; /* 默认隐藏 */
+    position: fixed; /* 固定定位 */
+    z-index: 1; /* 置于顶层 */
+    padding-top: 100px; /* 位置 */
+    left: 0;
+    top: 0;
+    width: 100%; /* 宽度 */
+    height: 100%; /* 高度 */
+    overflow: auto; /* 启用滚动条 */
+    background-color: rgb(0,0,0); /* 背景色 */
+    background-color: rgba(0,0,0,0.9); /* 黑色背景 */
+}
+
+/* 模态窗口中的图片 */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+/* 关闭按钮 */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/* 如果需要，可以为其他特定的子部件添加更多的样式 */
