--- a/templates/study_chat/chat.html
+++ b/templates/study_chat/chat.html
@@ -16,7 +16,7 @@
         <i class="layui-icon layui-icon-voice chat-toolbar-icon"></i>
     </div>
 
-    <form class="layui-form" action="/chat/submit" method="post">
+    <form class="layui-form" action="/chat/submit_txt" method="post">
         <div class="chat-toolbar-chatmain">
             <div class="message-input-container">
                  <div class="layui-form-item layui-form-text chat-form-text">
