gpt回复并显示
能够正常和gpt交互并显示，准备重构下djangoadmin_chat.js,先将之前正常运行的代码保存

--- a/templates/study_chat/chatinfo.html
+++ b/templates/study_chat/chatinfo.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <div id="userInfo" style="display:none;"
-         data-avatar="{{ userInfo.avatar | default:'/static/assets/images/ic_403.png' }}">
+         data-avatar="{{ userInfo.avatar | default:'/static/assets/images/ic_403.png' }}"
+         data-userid="{{ userInfo.id }}">
     </div>
     <div id="chat-container"></div>
     <div id="myModal" class="modal">
