基本完成所有对话聊天界面
将重点总结界面写完，通过风琴式卡片将重点总结内容进行展示

--- a/templates/study_chat/tips.html
+++ b/templates/study_chat/tips.html
@@ -1,5 +1,11 @@
-<div class="layui-bg-gray" style="height: 100%">
-    <div>
-        占位用
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/study_chat/tips.css' %}">
+</head>
+<body>
+<div class="container"></div>
+
+</body>
+</html>
