--- a/templates/study_chat/themmatic.html
+++ b/templates/study_chat/themmatic.html
@@ -3,7 +3,8 @@
 <head>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/study_chat/thematic.css' %}">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'assets/js/jquery-3.7.1.min.js' %}"></script>
+{#    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>#}
 </head>
 <body>
 <div class="layui-row chat-thematic">
