关闭图片预览
完成在聊天窗口关闭图片预览窗口，并单独调试好ocr识别代码，下一步将ocr识别加入到项目中

--- a/templates/study_chat/chat.html
+++ b/templates/study_chat/chat.html
@@ -22,7 +22,7 @@
             <div class="message-input-container">
                 <div class="layui-form-item chat-form-image" style="display:none">
                     <img id="image-preview" src="" alt="Image Preview"/>
-                    <button class="close-btn layui-icon layui-icon-close"></button>
+                    <button type="button" class="close-btn layui-icon layui-icon-close" onclick="closeImagePreview()"></button>
                 </div>
                 <div class="layui-form-item layui-form-text chat-form-text">
                     <textarea id="chat-text" name="chat-text" rows="4" autofocus="true" class="text-edit"></textarea>
