--- a/templates/study_chat/chat.html
+++ b/templates/study_chat/chat.html
@@ -39,10 +39,9 @@
                 </div>
             </div>
             <div class="record-container" id="record-container">
-                <div class="record-button-container">
-                    <button class="record-button">录音</button>
-                    <button class="cancel-button" onclick="restoreOriginalLayout()">取消</button>
-                </div>
+                <button type="button" class="record-button layui-icon layui-icon-mike"></button>
+                <button type="button" class="cancel-button layui-icon layui-icon-down"
+                        onclick="restoreOriginalLayout()"></button>
             </div>
         </div>
     </form>
