录音识别处理
实现录音识别并将录音结果发送给后端，后端语音识别好之后返回结果给前端，下一步前端展示识别结果

--- a/templates/study_chat/chat.html
+++ b/templates/study_chat/chat.html
@@ -39,9 +39,8 @@
                 </div>
             </div>
             <div class="record-container" id="record-container">
-                <button type="button" class="record-button layui-icon layui-icon-mike"></button>
-                <button type="button" class="cancel-button layui-icon layui-icon-down"
-                        onclick="restoreOriginalLayout()"></button>
+                <button type="button" class="record-button layui-icon layui-icon-mike" id="record-button"></button>
+                <button type="button" class="cancel-button layui-icon layui-icon-down" onclick="restoreOriginalLayout()"></button>
             </div>
         </div>
     </form>
